--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </div>
     </header>
     <nav>
-        <ul>
-            <li><a class="active" href="index.html">Home</a></li>
-            <li><a href="team.html">Team</a></li>
+        <ul class="navul">
+            <li class ="navli"><a class="active" href="index.html">Home</a></li>
+            <li class ="navli"><a href="team.html">Team</a></li>
         </ul>
     </nav>
     <main>
@@ -62,18 +62,44 @@
         </div>
         <div id="beforeFooter">
             <div>
-                <p style="color: #414d7c; font-size:45;">What comes standard<br></p><p>The coverage you need</p>
+                <h3 class="beforeFooterHead">What comes standard<br></h3>
+                <p>The coverage you need</p>
+                <ul class="beforeFooterList">
+                    <li>
+                        <p>Bodily Injury Liability</p>
+                    </li>
+                    <li>
+                        <p>Property Damage</p>
+                    </li>
+                    <li>
+                        <p>Medical Payments</p>
+                    </li>
+                </ul>
+                <hr>
             </div>
             <div>
-                <p style="color: #414d7c; font-size:45;">Add-on protections & coverage<br></p><p>For more peace of mind</p>
+                <h3 class="beforeFooterHead">Add-on protections & coverage<br></h3>
+                <p>For more peace of mind</p>
+                <ul class="beforeFooterList">
+                    <li class="bfli">
+                        <p>Better Car Replacement</p>
+                    </li>
+                    <li>
+                        <p>Towing & Labor</p>
+                    </li>
+                    <li>
+                        <p>Rental Car Coverage</p>
+                    </li>
+                </ul>
+                <hr>
             </div>
         </div>
     </main>
     <footer style="background-color: black;">
         <nav>
-            <ul>
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="team.html">Team</a></li>
+            <ul class="navul">
+                <li class ="navli"><a class="active" href="index.html">Home</a></li>
+                <li class ="navli"><a href="team.html">Team</a></li>
             </ul>
         </nav>
         <img id="logo-footer" src="./images/logo-inv.png" alt="logo">
