added reload function

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title></title>
 </head>
 
-<body>
+<body onload="reload()">
     <header>
         <div id="blackLogo">
             <img src="./images/logo.png" alt="logo">
